# Call_RenderScript_from_NDK

./: .travis.yml  README.md
CallRenderScriptFromNDK/: .travis.yml
CallRenderScriptFromNDK/app/: CMakeLists.txt  build.gradle
CallRenderScriptFromNDK/app/src/androidTest/java/uelordi/android/hellocomputendk_rs/: ExampleInstrumentedTest.java
CallRenderScriptFromNDK/app/src/main/: AndroidManifest.xml
CallRenderScriptFromNDK/app/src/main/cpp/: ScriptC_mono.cpp  ScriptC_mono.h  logger.h  native-lib.cpp
CallRenderScriptFromNDK/app/src/main/java/uelordi/android/hellocomputendk_rs/: MainActivity.java
CallRenderScriptFromNDK/app/src/main/res/layout/: activity_main.xml
CallRenderScriptFromNDK/app/src/main/res/values/: strings.xml
CallRenderScriptFromNDK/app/src/test/java/uelordi/android/hellocomputendk_rs/: ExampleUnitTest.java
CallRenderScriptFromNDK/gradle/wrapper/: gradle-wrapper.properties
